Refactor the generator to work based on API artifacts